--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="calculator">
-      <input type="text" placeholder="0" id="inputBox">
+      <input type="text" class="nonEditable" placeholder="0" id="inputBox">
       <div>
         <button class="operator">AC</button>
         <button class="operator">DEL</button>
@@ -42,5 +42,9 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2023 MyeniWeb Wizards. All rights reserved.</p>
+        <p>Contact: sipheanele@gmail.com</p>
+  </footer>
   </body>
 </html>
